#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-08-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999922 released.

        * Plan Expiration is complete.


2013-08-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999921 released.

        * Nearly Complete with Plan Expiration logic.


2013-08-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999920 released.

        * More improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999919 released.

        * More improvements to the Plan Menu facility.


2013-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999918 released.

        * More improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-08-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999917 released.

        * More improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999916 released.

        * More improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999915 released.

        * Lots of improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-07-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
