@@ -451,8 +451,7 @@ Brian M. Kelly <Brian.Kelly@fullautosoftware.net>
 --------------------------------------------------------------------------------
 
 COPYRIGHT
-Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
-              2006, 2007, 2010, 2011, 2012 by Brian M. Kelly.
+Copyright (C) 2000-2013 by Brian M. Kelly
 
 This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License. (http://www.opensource.org/licenses/gpl-license.php).
 
