@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 57cc6fb7524b3f7e340458ea5080320ef7f50671 ChangeLog
+SHA1 7d67e3368b50b3f1e7d6dee8e2662bc1ab5ff939 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 9d9fc2bd249592ec8757e9d9c3f504fc9aed70dd META.yml
-SHA1 c11e680ee1c48a0749872c94edde25a2a7be936c MYMETA.json
-SHA1 39390d63714f7dc06331d514b395530eba4c877d MYMETA.yml
-SHA1 29a8dfe438139a3895e27e11154c04dd5281720b Makefile.PL
-SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
+SHA1 a3cc4b82547917ff05897e62137f29f210082e00 META.yml
+SHA1 957fe4fa965d26ca17e152606b3fd1285fe05cd8 MYMETA.json
+SHA1 d530d471adb76f3e0664e53113736b0030a60e93 MYMETA.yml
+SHA1 69841a284dad0a3cdbc3442bab01948943f3f1be Makefile.PL
+SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 26ab05febbdab79359953d086b447397c1719b5c bin/fullauto.pl
 SHA1 e7597f2c7bab49174bbe597b575bc29f987af7f1 bin/install_mozrepl_plugin.exe
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 4376f19b2e3f4f16b2a3d5efc48ebd4d33942da0 lib/Net/FullAuto.pm
+SHA1 6408fbcbe70058911ff7bdad1a8e2a9bbe24063b lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 dd605c4689087bc9ea4b9e9d4bc271cb95913042 lib/Net/FullAuto/FA_Core.pm
+SHA1 72fec2f20d3ce2b238bada35eae33b41c424c540 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSCp89AAoJEBa/9Pad787EHcUH/igy0Hnq/HOGeRN6ScLVNBFv
-JS3kQMCvkhQEX5eQKj1N9eTF7P6JFTXHdBFUpRtfbJMnL2YuxJO2WZQsu7X6eEhj
-cRkY648/Ac9CucxkBZrpj5aOVsDBfQLF1hDledWlt4fwX9P5I9fF+jcMNkVmW/tv
-BFDDOaQ/OuVPe1Q/5DRajWQuyDhTEQg81jcwlm+/rEQhxBZfEuDZTLPHYT6XAOZp
-mYtqrxU9ZtxB0vHR5GounsmKNPcYieiiM0s/Uz6GuRjj38DUys/O96ix3C8jueaa
-NWSGFiMLtS1irmgpMtemsFHIfKuna7xiDLKTnaoWsIXJHrZhRSnJkJ2VLaF6EZo=
-=za7/
+iQEcBAEBAgAGBQJSGsJiAAoJEBa/9Pad787EUuwIALuxreIMipin+N7xVNak0HVi
+0BjPhHJ+WHfxZymYqGwrF12JzCEt4tP5kNRMSXSYqyUu9Ajm+UqnFXBZXyY97Y1Q
+8BraLPtMVrCDcepVUNR4VTcDE3RThzGuhcOJ53CrXcn9eeN5eD/eID1IPeadzSRN
+G8WBds/T3rvHqq545Zhdo2i8jp2D3jsEYJowMiSr5HRxx23qpJAc2c4kipbIcvAC
+jHFvuL5WX1SbYGHbfwZq7LMDeq+2cgdK7r61bpK56T9QpBGhXsXsS4XCE5lAUZaR
+1y/IJXYUrUhqN8Iq1gMxi9sz82eHYan521fReChnMvQqfgLaHWYZqAHLJb6PFY8=
+=dKOy
 -----END PGP SIGNATURE-----
